update ForwardLight - Ambient Hemisperical light

--- a/src/ForwardLight_AmbientLight/ForwardLight_AmbientLight/ForwardLight_AmbientLight.vcxproj.filters
+++ b/src/ForwardLight_AmbientLight/ForwardLight_AmbientLight/ForwardLight_AmbientLight.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="forward_ambientlight.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\..\..\Media\forwardlight_ambientlight\hlsl.fx" />
+  </ItemGroup>
 </Project>
