update forward light - spot light

--- a/Src/Forwardlight_Spotlight/Forwardlight_Spotlight/Forwardlight_Spotlight.vcxproj
+++ b/Src/Forwardlight_Spotlight/Forwardlight_Spotlight/Forwardlight_Spotlight.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{BB80F19A-FAF5-4D2B-9A30-9A2163812870}</ProjectGuid>
+    <ProjectGuid>{08325234-5CC4-4046-B33D-239E4253A0BD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ForwardLight_PointLight</RootNamespace>
+    <RootNamespace>Forwardlight_Spotlight</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -154,7 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="forwardlight_pointlight.cpp" />
+    <ClCompile Include="forwardlight_spotlight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Common\AI\AI.vcxproj">
@@ -174,12 +174,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\..\..\Media\forwardlight_pointlight\hlsl.fx">
+    <CustomBuild Include="..\..\..\Media\forwardlight_spotlight\hlsl.fx">
       <FileType>Document</FileType>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">fxc /Fc /Od /Zi /T fx_5_0 /Fo "%(RelativeDir)%(Filename).fxo" "%(FullPath)"</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">fxc compile for debug: %(FullPath)</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(RelativeDir)%(Filename).fxo</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">fxc /Fc /Od /Zi /T fx_5_0 /Fo "%(RelativeDir)%(Filename).fxo" "%(FullPath)"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">fxc /T fx_5_0 /Fo "%(RelativeDir)%(Filename).fxo" "%(FullPath)"</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">fxc compile for debug: %(FullPath)</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(RelativeDir)%(Filename).fxo</Outputs>
     </CustomBuild>
