--- a/Src/DeferredShading_Pointlight/DeferredShading_Pointlight/DeferredShading_Pointlight.vcxproj
+++ b/Src/DeferredShading_Pointlight/DeferredShading_Pointlight/DeferredShading_Pointlight.vcxproj
@@ -73,6 +73,7 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\..\Bin\</OutDir>
     <IntDir>$(SolutionDir)../../Obj/$(ProjectName)/$(Configuration)/</IntDir>
+    <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
